# dicom2ply

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/dicom2ply/: __init__.py  cli.py  contour.py  ct_cache.py  exporters.py  geometry.py  masking.py  patient.py  ply_writer.py  roi.py
tests/: conftest.py  test_cli.py  test_contour_geometry_and_rtstruct.py  test_exporters.py  test_patient_integration.py  test_roi.py  test_roi_advanced.py  test_tolerances_and_geometry.py
